# demo_python_package

./: .gitignore  README.md  pyproject.toml
src/example_package/: example.py
src/example_package.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_example.py
