[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package"
version = "0.0.1"
authors = [
    { name = "Eason1118", email = "1084430062@qq.com" },
]
description = "A small example python package"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "certifi==2022.6.15",
    "charset-normalizer==2.1.1",
    "idna==3.3",
    "requests==2.28.1",
    "urllib3==1.26.12",
]

[project.urls]
"Homepage" = "https://github.com/Eason1118/demo_python_package"
"Bug Tracker" = "https://github.com/Eason1118/demo_python_package/issues"
